<resources>
    <string name="app_name">S7-VAT</string>
    <string name="menu_settings">Settings</string>
    <string name="ip_address_hint">IP Address</string>
    <string name="type_ip">CPU IP address</string>
    <string name="mark_model">CPU model</string>
    <string name="pingButton">Ping</string>
    <string name="rack">Rack</string>
    <string name="slot">Slot</string>
    <string name="S7_300">S7-300</string>
    <string name="S7_400">S7-400</string>
    <string name="S7_1200">S7-1200</string>
    <string name="S7_1500">S7-1500</string>
    <string name="WinAC">WinAC</string>
    <string-array name="rack">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="slot">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="S7_area">
        <item>Input</item>
        <item>Output</item>
        <item>Marker</item>
        <item>DB</item>
    </string-array>
    <string name="db_number">DB Number</string>
    <string-array name="S7_data_type">
        <item>bit</item>
        <item>byte</item>
        <item>word</item>
        <item>dword</item>
        <item>real</item>
    </string-array>
    <string name="bit_offset">bit offset</string>
    <string name="byte_offset">byte offset</string>
</resources>
